---
title: 前端状态机
config:
  theme: base
  themeVariables:
    primaryColor: "#e8e8e6"
    primaryTextColor: "#1a1a1a"
    primaryBorderColor: "#8b8b8b"
    lineColor: "#6b7280"
    fontSize: 14
---
stateDiagram-v2
    [*] --> idle : 页面加载
    
    idle --> processing : 用户发送消息<br/>POST /api/chat
    
    state processing {
        [*] --> streaming
        streaming : SSE text 事件 → 流式渲染
        streaming : InputBar 禁用
    }
    
    processing --> awaiting_confirm : SSE confirm_required<br/>(tool 在 confirmTools 中)
    processing --> done : SSE done
    processing --> error : SSE error / 网络断开
    
    state awaiting_confirm {
        [*] --> show_card
        show_card : ConfirmCard 弹出
        show_card : 显示表单 + 确认/拒绝按钮
    }
    
    awaiting_confirm --> processing : 用户确认/拒绝<br/>POST /api/confirm<br/>SSE confirm_resolved
    
    done --> idle : 准备下一次对话
    error --> idle : 用户重试
    
    note right of processing
        AgentPhase: processing
        消息列表持续追加
    end note
    
    note right of awaiting_confirm
        AgentPhase: awaiting_confirm
        lastConfirmToolRef 防重复
    end note